--- a/CORRECTIONS/style.css
+++ b/CORRECTIONS/style.css
@@ -528,9 +528,23 @@ button {
   border-radius: 0 0 29px 29px;
 }
 
+.form-group{
+  margin-bottom: 20px;
+}
+#message{
+  height: 20%;
+}
 .form-control {
   border-color: rgba(0, 0, 0, 0.1);
-  box-shadow: none;
+  display: block;
+  width: 100%;
+  height: 30px;
+  padding: 6px 12px;
+  font-size: 14px;
+  line-height: 3.429;
+  color: #555;
+  background-color: #fff;
+  border: 1px solid #ccc;
 }
 
 .scrollToTop {
